[project]
name = "map-ip-to-asn"
version = "0.1.0"
description = "A minimal CLI tool to map IP addresses to ASNs using CAIDA data"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pandas>=2.0.0",
    "pyipmeta>=2.2.0",
    "pydantic>=2.0.0",
    "pyarrow>=14.0.0",  # For parquet support
]

[project.scripts]
map-ip-to-asn = "src.cli:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "B", "SIM"]
ignore = ["E501"]  # Line too long - handled by formatter
target-version = "py38"

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --cov=src --cov-report=term-missing"